--- a/debian/changelog
+++ b/debian/changelog
@@ -1,16 +1,56 @@
+ddm (0.6.2) debian; urgency=low
+
+  * Speed improvement detecting graphics cards and fix wrong detection of ATI cards
+
+ -- Schoelje <schoelje@solydxk.com>  Fri, 22 Mar 2013 16:00:00 +0100
+
+ddm (0.6.1) debian; urgency=low
+
+  * Fix fglrx-glx-ia32 being installed on 32-bit systems
+
+ -- Schoelje <schoelje@solydxk.com>  Wed, 20 Mar 2013 16:00:00 +0100
+ 
+ddm (0.5.9) debian; urgency=low
+
+  * Fix ATI bug
+
+ -- Schoelje <schoelje@solydxk.com>  Mon, 18 Feb 2013 20:30:00 +0100
+
+ddm (0.5.8) debian; urgency=low
+
+  * Nvidia feed made flexible
+
+ -- Schoelje <schoelje@solydxk.com>  Sat, 16 Feb 2013 12:30:00 +0100
+
+ddm (0.5.7) debian; urgency=low
+
+  * ATI issue not finding fglrx-glx-ia32 version 0.5.6
+
+ -- Schoelje <schoelje@solydxk.com>  Tue, 26 Feb 2013 20:00:00 +0100
+
+ddm (0.5.6) debian; urgency=low
+
+  * Minor bug fixes version 0.5.6
+
+ -- Schoelje <schoelje@solydxk.com>  Tue, 19 Feb 2013 12:30:00 +0100
+ 
+ddm (0.5.5) debian; urgency=low
+
+  * Updated Nvidia last-mismatching-module-version to 304.64 version 0.5.5
+
+ -- Schoelje <schoelje@solydxk.com>  Fri, 15 Feb 2013 13:00:00 +0100
+ 
 ddm (0.5.4) debian; urgency=low
 
   * Better support for localized systems version 0.5.4
 
  -- Schoelje <schoelje@schoelje.nl>  Fri, 01 Feb 2013 10:18:05 +0100
-
  
 ddm (0.5.3) debian; urgency=low
 
   * Driver switching version 0.5.3
 
  -- Schoelje <schoelje@schoelje.nl>  Tue, 23 Jan 2013 08:38:00 +0100
-
 
 ddm (0.2.4) debian; urgency=low
 
