--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+ddm (1.0.4) debian; urgency=low
+
+  * Start with gksudo instead of gksu
+
+ -- Schoelje <schoelje@solydxk.com>  Wed, 23 Apr 2014 19:00:00 +0100
+
+ddm (1.0.3) debian; urgency=low
+
+  * Added Russian translation
+  * Adapted Dutch translation
+
+ -- Schoelje <schoelje@solydxk.com>  Tue, 01 Apr 2014 18:00:00 +0100
+
 ddm (1.0.1) debian; urgency=low
 
   * Added Czech translation
