--- a/po/fr.po
+++ b/po/fr.po
@@ -5,81 +5,84 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: ddm 0.7.1:\n"
+"Project-Id-Version: ddm 2.0.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-02-20 10:16+0100\n"
-"PO-Revision-Date: 2013-09-04 20:40+0100\n"
-"Last-Translator: Kyodev <kyodev@gmail.com>\n"
+"PO-Revision-Date: 2015-05-05 12:23+0100\n"
+"Last-Translator: Jocelyn <anechampenois@solydxk.com>\n"
 "Language-Team: solyd-fr <admin@solydxk.com>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.6.10\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../usr/lib/ddm/ddm.py:46 ../usr/lib/ddm/main.py:26
 #: ../usr/share/applications/ddm.desktop.in.h:1
 msgid "Device Driver Manager"
-msgstr ""
+msgstr "Device Driver Manager"
 
 #: ../usr/lib/ddm/ddm.py:47 ../usr/lib/ddm/ddm.py:155
 msgid "Install"
-msgstr ""
+msgstr "Installation "
 
 #: ../usr/lib/ddm/ddm.py:48
 msgid "Help"
-msgstr ""
+msgstr "Aide"
 
 #: ../usr/lib/ddm/ddm.py:49
 msgid "Quit"
-msgstr ""
+msgstr "Quitter"
 
 #: ../usr/lib/ddm/ddm.py:104
 msgid "No internet connection"
-msgstr ""
+msgstr "Pas de connexion internet"
 
 #: ../usr/lib/ddm/ddm.py:105
 msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
 msgstr ""
+"Une connexion internet est nécessaire pour installer un programme supplémentaire.\n"
+"Merci de vous connecter et de réessayer."
 
 #: ../usr/lib/ddm/ddm.py:155
 msgid "Device"
-msgstr ""
+msgstr "Périphérique"
 
 #: ../usr/lib/ddm/ddm.py:171
 msgid "Remove kernel"
-msgstr ""
+msgstr "Désinstaller le noyau"
 
 #: ../usr/lib/ddm/ddm.py:172
 msgid ""
 "You cannot remove a booted kernel.\n"
 "Please, boot another kernel and try again."
 msgstr ""
+"Impossible de supprimer le noyau utilisé actuellement.\n"
+"Merci de réessayer après redémarrage avec un autre noyau."
 
 #: ../usr/lib/ddm/ddm.py:193
-#, fuzzy
 msgid "Hardware scan"
-msgstr "Matériel"
+msgstr "Analyse du matériel"
 
 #: ../usr/lib/ddm/ddm.py:197
 msgid "There are no available drivers for your hardware:"
-msgstr ""
+msgstr "Il n'y a pas de pilote disponible pour votre matériel:"
 
 #: ../usr/lib/ddm/ddm.py:203
 msgid "DDM did not find any supported hardware."
-msgstr ""
+msgstr "DDM n'a trouvé aucun matériel supporté."
 
 #: ../usr/lib/ddm/ddm.py:251
 msgid "Saved"
-msgstr ""
+msgstr "Enregistré"
 
 #: ../usr/lib/ddm/ddm.py:252
 msgid "You will need to restart your system."
-msgstr ""
+msgstr "Vous devez redémarrer votre système."
 
 #: ../usr/lib/ddm/ddm.py:456
 msgid "PAE capable system"
@@ -91,30 +94,30 @@ msgid ""
 "Please, run 'sudo apt-get -f install' in a terminal.\n"
 "Visit our forum for support: http://forums.solydxk.com"
 msgstr ""
+"Une erreur s'est produite durant l'installation.\n"
+"Ouvrez un terminal et exécutez 'sudo apt-get -f install'.\n"
+"Visitez notre forum pour toute aide: http://forums.solydxk.com"
 
 #: ../usr/lib/ddm/ddm.py:567
 msgid "The software has been successfully installed."
-msgstr ""
+msgstr "Le programme a été installé avec succès."
 
 #: ../usr/lib/ddm/main.py:27
-#, fuzzy
 msgid ""
 "Device Driver Manager cannot be started in a live environment\n"
 "You can use the --force argument to start DDM in a live environment"
 msgstr ""
 "DDM ne peut fonctionner dans un environnement live\n"
 "\n"
-"Pour forcer le démarrage, utiliser l'argument --force"
+"Pour forcer le démarrage, utilisez l'argument --force"
 
 #: ../usr/lib/ddm/main.py:69
 msgid "Unexpected error"
-msgstr ""
+msgstr "Erreur inattendue"
 
 #: ../usr/lib/ddm/main.py:70
-msgid ""
-"<b>DDM has failed with the following unexpected error. Please submit a bug "
-"report!</b>"
-msgstr ""
+msgid "<b>DDM has failed with the following unexpected error. Please submit a bug report!</b>"
+msgstr "<b>DDM a rencontré une erreur inattendue. Merci de faire un rapport de bug!</b>"
 
 #~ msgid "Driver"
 #~ msgstr "Driver"
