--- a/po/ca.po
+++ b/po/ca.po
@@ -1,28 +1,28 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# root <arjenbalfoort@solydxk.com>, 2015.
 msgid ""
 msgstr ""
 "Project-Id-Version: DDM 201406\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-02-20 10:16+0100\n"
-"PO-Revision-Date: 2014-06-28 13:16+0100\n"
-"Last-Translator: Eduard Selma <selma@tinet.cat>\n"
-"Language-Team: SolydXK <admin@solydxk.com>\n"
-"Language: \n"
+"POT-Creation-Date: 2015-05-08 17:18+0200\n"
+"PO-Revision-Date: 2015-05-08 17:32+0200\n"
+"Last-Translator: root <arjenbalfoort@solydxk.com>\n"
+"Language-Team: none\n"
+"Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Catalan\n"
-"X-Poedit-Country: SPAIN\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Virtaal 0.7.1\n"
 "X-Poedit-SourceCharset: utf-8\n"
 
 #: ../usr/lib/ddm/ddm.py:46 ../usr/lib/ddm/main.py:26
+#: ../usr/share/kde4/services/kcm_device_driver_manager.desktop.in.h:1
 #: ../usr/share/applications/ddm.desktop.in.h:1
 msgid "Device Driver Manager"
-msgstr ""
+msgstr "Device Driver Manager"
 
 #: ../usr/lib/ddm/ddm.py:47 ../usr/lib/ddm/ddm.py:155
 msgid "Install"
@@ -61,7 +61,6 @@ msgid ""
 msgstr ""
 
 #: ../usr/lib/ddm/ddm.py:193
-#, fuzzy
 msgid "Hardware scan"
 msgstr "Maquinari"
 
@@ -103,7 +102,6 @@ msgid ""
 "You can use the --force argument to start DDM in a live environment"
 msgstr ""
 "DDM no pot funcionar en un entorn autònom\n"
-"\n"
 "Per forçar l'arrencada, useu l'argument '--force'"
 
 #: ../usr/lib/ddm/main.py:69
