--- a/po/fr.po
+++ b/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ddm 2.0.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-02-20 10:16+0100\n"
+"POT-Creation-Date: 2015-05-08 17:18+0200\n"
 "PO-Revision-Date: 2015-05-05 12:23+0100\n"
 "Last-Translator: Jocelyn <anechampenois@solydxk.com>\n"
 "Language-Team: solyd-fr <admin@solydxk.com>\n"
@@ -20,6 +20,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../usr/lib/ddm/ddm.py:46 ../usr/lib/ddm/main.py:26
+#: ../usr/share/kde4/services/kcm_device_driver_manager.desktop.in.h:1
 #: ../usr/share/applications/ddm.desktop.in.h:1
 msgid "Device Driver Manager"
 msgstr "Device Driver Manager"
@@ -45,7 +46,8 @@ msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
 msgstr ""
-"Une connexion internet est nécessaire pour installer un programme supplémentaire.\n"
+"Une connexion internet est nécessaire pour installer un programme "
+"supplémentaire.\n"
 "Merci de vous connecter et de réessayer."
 
 #: ../usr/lib/ddm/ddm.py:155
@@ -116,8 +118,12 @@ msgid "Unexpected error"
 msgstr "Erreur inattendue"
 
 #: ../usr/lib/ddm/main.py:70
-msgid "<b>DDM has failed with the following unexpected error. Please submit a bug report!</b>"
-msgstr "<b>DDM a rencontré une erreur inattendue. Merci de faire un rapport de bug!</b>"
+msgid ""
+"<b>DDM has failed with the following unexpected error. Please submit a bug "
+"report!</b>"
+msgstr ""
+"<b>DDM a rencontré une erreur inattendue. Merci de faire un rapport de bug!</"
+"b>"
 
 #~ msgid "Driver"
 #~ msgstr "Driver"
