--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ddm (2.1.0) debian; urgency=low
+
+  * Improved Arabic translation 
+  * Added apt-show-versions as a dependency
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Wed, 13 May 2015 16:00:00 +0100
+
 ddm (2.0.9) debian; urgency=low
 
   * Added KCM launcher for System Settings
