--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ddm (2.1.1) debian; urgency=low
+
+  * Fixed crash on binary saved log file
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Wed, 27 May 2015 18:00:00 +0100
+
 ddm (2.1.0) debian; urgency=low
 
   * Improved Arabic translation 
