--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ddm (2.1.2) debian; urgency=low
+
+  * Improved localization handling
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Mon, 22 June 2015 12:00:00 +0100
+
 ddm (2.1.1) debian; urgency=low
 
   * Fixed crash on binary saved log file
