--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,20 @@
+ddm (2.1.4) debian; urgency=low
+
+  * Check live session on /lib/live/mount instead of /lib/live
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Tue, 07 Jul 2015 07:30:00 +0100
+
+ddm (2.1.3) debian; urgency=low
+
+  * Solved bug not recognizing loaded graphics or wireless drivers
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Mon, 25 Jun 2015 12:00:00 +0100
+
 ddm (2.1.2) debian; urgency=low
 
   * Improved localization handling
 
- -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Mon, 22 June 2015 12:00:00 +0100
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Mon, 22 Jun 2015 12:00:00 +0100
 
 ddm (2.1.1) debian; urgency=low
 
