Removed tab from pot

--- a/po/ddm.pot
+++ b/po/ddm.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-10-20 16:48+0200\n"
+"POT-Creation-Date: 2015-10-20 16:56+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -199,7 +199,7 @@ msgstr ""
 #: en/help.html+html.body.div.p:34
 msgid ""
 "This will install the PAE kernel on multi-processor systems running a 32-bit "
-"OS.\tUse the \"-p\" argument to remove the PAE kernel from your system. Note "
+"OS. Use the \"-p\" argument to remove the PAE kernel from your system. Note "
 "that you cannot remove the kernel when you are currently booted into that "
 "kernel."
 msgstr ""
